--- a/bobviewdjango/.gitignore
+++ b/bobviewdjango/.gitignore
@@ -63,8 +63,8 @@ typings/
 #python gitignore
 # Byte-compiled / optimized / DLL files
 __pycache__/
-BobView/__pycache__/
-myapp/__pycache__/
+bobviewdjango/BobView/__pycache__/
+bobviewdjango/myapp/__pycache__/
 *.py[cod]
 *$py.class
 
