--- a/bobviewfront/package.json
+++ b/bobviewfront/package.json
@@ -16,6 +16,7 @@
         "core-js": "^2.6.5",
         "es6-promise": "^4.2.8",
         "iamport-react-native": "^1.3.0",
+        "jQuery": "^1.7.4",
         "jquery": "^3.4.1",
         "roboto-fontface": "*",
         "vue": "^2.6.10",
@@ -23,6 +24,7 @@
         "vue-browser-geolocation": "^1.8.0",
         "vue-iamport": "^0.1.2",
         "vue-router": "^3.1.3",
+        "vue2-google-maps": "^0.10.7",
         "vuetify": "^2.0.0",
         "vuex": "^3.1.1",
         "vuex-router-sync": "^5.0.0"
@@ -35,6 +37,7 @@
         "babel-eslint": "^10.0.1",
         "eslint": "^5.16.0",
         "eslint-plugin-vue": "^5.0.0",
+        "expose-loader": "^0.7.5",
         "vue-cli-plugin-vuetify": "^0.6.3",
         "vue-template-compiler": "^2.6.10"
     },
